# alfr3d

./: .env.bak  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  RELEASE_NOTES.md  ambient_experience.md  docker-compose.yml  external_access_setup.md  k8s-env  lint.sh  nginx-alfr3d.conf  nginx.conf  nginx.conf.example  test_db.py  trigger_environment.py  trigger_scan.py
k8s/: alfr3d-configmap.yaml  configmap.yaml  ingress.yaml  kafka-service.yaml  kafka-statefulset.yaml  mysql-service.yaml  mysql-statefulset.yaml  service-api-deployment.yaml  service-api-service.yaml  service-daemon-deployment.yaml  service-device-deployment.yaml  service-environment-deployment.yaml  service-frontend-deployment.yaml  service-frontend-service.yaml  service-speak-deployment.yaml  service-speak-service.yaml  service-user-deployment.yaml  zookeeper-statefulset.yaml
services/common/: __init__.py  cache.py  db_pool.py  db_utils.py  error_handling.py  ha_utils.py  kafka_pool.py  pyproject.toml  st_utils.py
setup/: authorize_google.py  backup_db.sh  build_images.sh  cleanup_device_history.py  cleanup_device_history.sh  createTables.sql  drop_cleanup_trigger.sql  migration_001_calendar_cleanup.sql  migration_002_iot.sql  migration_003_routines.sql  migration_004_personality.sql  migration_005_indexes.sql  migration_006_personality_context.sql  migration_007_device_types_expansion.sql  migration_008_iot_device_link.sql
tests/: conftest.py  docker-compose.yml  requirements.txt  test_api_service.py  test_daemon_service.py  test_device_service.py  test_kafka.py  (+4 more)
(+121 files in other folders)
