[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alfr3d-common"
version = "1.0.0"
description = "Shared utilities for ALFR3D microservices"
requires-python = ">=3.9"
dependencies = [
    "pymysql>=1.1.0",
    "DBUtils>=3.1.0",
    "confluent-kafka>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["common*"]
